@@ -1,5 +1,11 @@
 2009-03-31  Gordon Williams  <gordon.williams@collabora.co.uk>
 
+        * matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Fix for BN#107681.
+          Moved setting and unsetting a pointer to the ClutterClient from
+          HD to inside the ClutterClient
+
+2009-03-31  Gordon Williams  <gordon.williams@collabora.co.uk>
+
         * matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Fix for NB#107323.
           It really works this time...
 
